# antifake

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  manual-task.md  plan.md  status.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  tools_helpers.py
backend/app/blockchain/: client.py
backend/app/crypto/: anchor.py  preprocess.py
backend/app/engine/: density.py  orchestrator.py  velocity.py
backend/app/ml/: __init__.py  classifier.py  explainer.py
backend/app/router/: enterprise.py  scan.py
backend/seed/: seed.py  seed_data.py
backend/seed/data/: regions.json
backend/tests/: test_anchor.py  test_density.py  test_e2e.py  test_enhanced.py  test_enterprise.py  test_explain.py  test_gps.py  test_https.py  test_orchestrator.py  test_partner_api.py  test_preprocess.py  test_samples.py  test_velocity.py  test_verify.py
backend/tools/: TRAINING.md  benchmark.py  generate_cert.py  generate_samples.py  onboard_partner.py  photo_robustness.py  printable_labels.py  robustness_test.py  run_https.py  train_classifier.py
docs/: setup.md  (+5 more)
version1/backend/: .coverage  pyproject.toml
version1/backend/app/: dependencies.py  schemas.py
version1/backend/tests/: conftest.py  test_main.py  test_scan_api.py
version2/backend/: antifake.db  pyproject.toml
version2/backend/antifake_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
version2/backend/app/: database.py  main.py  models.py
version2/backend/tests/: test_anchor.py  test_enhanced.py  test_samples.py
version2/backend/tools/: generate_samples.py
(+61 files in other folders)
