[project]
name = "antifake-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opencv-python-headless",
    "numpy",
    "Pillow",
    "aiosqlite",
    "qrcode[pil]",
    "onnxruntime",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "cryptography",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
