[project]
name = "antifake-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi", "uvicorn[standard]", "redis", "fakeredis",
    "web3", "pillow", "opencv-python-headless", "numpy",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest", "httpx", "pytest-asyncio", "pytest-cov",
    "ruff", "mypy",
    "types-requests",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/test_e2e.py"]
